--- a/qrgui/mainwindow/mainWindow.ui
+++ b/qrgui/mainwindow/mainWindow.ui
@@ -45,7 +45,7 @@
      <x>0</x>
      <y>0</y>
      <width>843</width>
-     <height>21</height>
+     <height>19</height>
     </rect>
    </property>
    <widget class="QMenu" name="menu_File">
@@ -92,6 +92,7 @@
      <string>&amp;Tools</string>
     </property>
     <addaction name="actionShow"/>
+    <addaction name="actionExportToXml"/>
    </widget>
    <widget class="QMenu" name="menuEdit">
     <property name="title">
@@ -139,7 +140,7 @@
    <property name="minimumSize">
     <size>
      <width>80</width>
-     <height>140</height>
+     <height>211</height>
     </size>
    </property>
    <property name="windowTitle">
@@ -777,6 +778,11 @@
    </property>
    <property name="shortcut">
     <string>Ctrl+Shift+Z</string>
+   </property>
+  </action>
+  <action name="actionExportToXml">
+   <property name="text">
+    <string>Export to XML</string>
    </property>
   </action>
  </widget>
