--- a/plugins/robots/robotsInterpreter/details/d2RobotModel/d2Form.ui
+++ b/plugins/robots/robotsInterpreter/details/d2RobotModel/d2Form.ui
@@ -818,7 +818,7 @@ p, li { white-space: pre-wrap; }
     </widget>
    </item>
    <item row="0" column="2">
-    <widget class="GridParameters" name="gridParametersBox">
+	<widget class="qReal::interpreters::robots::details::d2Model::GridParameters" name="gridParametersBox">
     </widget>
    </item>
   </layout>
@@ -835,7 +835,7 @@ p, li { white-space: pre-wrap; }
    <header>../../../qrutils/graphicsUtils/colorlisteditor.h</header>
   </customwidget>
   <customwidget>
-   <class>GridParameters</class>
+   <class>qReal::interpreters::robots::details::d2Model::GridParameters</class>
    <extends>QFrame</extends>
    <header>details/d2RobotModel/gridParameters.h</header>
    <container>1</container>
