--- a/plugins/robots/robotsInterpreter/robotsInterpreter.qrc
+++ b/plugins/robots/robotsInterpreter/robotsInterpreter.qrc
@@ -42,5 +42,9 @@
         <file>icons/leftButtonPressed.png</file>
         <file>icons/rightButton.png</file>
         <file>icons/2d_none.png</file>
+        <file>icons/2d_drawEllipseCursor.png</file>
+        <file>icons/2d_drawLineCursor.png</file>
+        <file>icons/2d_drawStylusCursor.png</file>
+        <file>icons/2d_drawWallCursor.png</file>
     </qresource>
 </RCC>
