--- a/plugins/robots/robotsInterpreter/details/d2RobotModel/d2Form.ui
+++ b/plugins/robots/robotsInterpreter/details/d2RobotModel/d2Form.ui
@@ -14,32 +14,6 @@
    <string>2D Robot Model</string>
   </property>
   <layout class="QGridLayout" name="gridLayout" rowstretch="0,0,0,0,0,0,0,0,0,0,0,0,0" columnstretch="0,0,1,0,0">
-   <item row="12" column="0" colspan="2">
-    <widget class="QPushButton" name="autoCenteringButton">
-     <property name="toolTip">
-      <string>Camera following robot</string>
-     </property>
-     <property name="text">
-      <string/>
-     </property>
-     <property name="icon">
-      <iconset resource="../../robotsInterpreter.qrc">
-       <normaloff>:/icons/2d_target.png</normaloff>:/icons/2d_target.png</iconset>
-     </property>
-     <property name="iconSize">
-      <size>
-       <width>24</width>
-       <height>24</height>
-      </size>
-     </property>
-     <property name="checkable">
-      <bool>true</bool>
-     </property>
-     <property name="flat">
-      <bool>true</bool>
-     </property>
-    </widget>
-   </item>
    <item row="0" column="0" rowspan="4" colspan="2">
     <widget class="QGroupBox" name="toolsGroupBox">
      <property name="title">
@@ -818,7 +792,51 @@ p, li { white-space: pre-wrap; }
     </widget>
    </item>
    <item row="0" column="2">
-    <widget class="qReal::interpreters::robots::details::d2Model::GridParameters" name="gridParametersBox">
+    <widget class="qReal::interpreters::robots::details::d2Model::GridParameters" name="gridParametersBox"/>
+   </item>
+   <item row="12" column="0">
+    <widget class="QPushButton" name="autoCenteringButton">
+     <property name="toolTip">
+      <string>Camera following robot</string>
+     </property>
+     <property name="text">
+      <string/>
+     </property>
+     <property name="icon">
+      <iconset resource="../../robotsInterpreter.qrc">
+       <normaloff>:/icons/2d_target.png</normaloff>:/icons/2d_target.png</iconset>
+     </property>
+     <property name="iconSize">
+      <size>
+       <width>24</width>
+       <height>24</height>
+      </size>
+     </property>
+     <property name="checkable">
+      <bool>true</bool>
+     </property>
+     <property name="flat">
+      <bool>true</bool>
+     </property>
+    </widget>
+   </item>
+   <item row="12" column="1">
+    <widget class="QPushButton" name="initialStateButton">
+     <property name="minimumSize">
+      <size>
+       <width>0</width>
+       <height>30</height>
+      </size>
+     </property>
+     <property name="maximumSize">
+      <size>
+       <width>70</width>
+       <height>16777215</height>
+      </size>
+     </property>
+     <property name="text">
+      <string>InitState</string>
+     </property>
     </widget>
    </item>
   </layout>
