--- a/plugins/robots/robotsInterpreter/details/d2RobotModel/d2Form.ui
+++ b/plugins/robots/robotsInterpreter/details/d2RobotModel/d2Form.ui
@@ -228,7 +228,7 @@
          </size>
         </property>
         <property name="toolTip">
-         <string>None</string>
+         <string>None (N)</string>
         </property>
         <property name="text">
          <string/>
@@ -243,8 +243,11 @@
           <height>24</height>
          </size>
         </property>
+        <property name="shortcut">
+         <string>N</string>
+        </property>
         <property name="checkable">
-         <bool>false</bool>
+         <bool>true</bool>
         </property>
        </widget>
       </item>
